# pyjq

./: pyproject.toml
pyjq/: cli.py
